--- a/sections/featured-categories.liquid
+++ b/sections/featured-categories.liquid
@@ -1,4 +1,19 @@
-<section class="featured-categories">
+<section class="featured-categories" style="
+  padding-top: {{ section.settings.padding_top }}px;
+  padding-bottom: {{ section.settings.padding_bottom }}px;
+  {% if section.settings.mobile_padding_top != blank %}
+    --mobile-padding-top: {{ section.settings.mobile_padding_top }}px;
+  {% endif %}
+  {% if section.settings.mobile_padding_bottom != blank %}
+    --mobile-padding-bottom: {{ section.settings.mobile_padding_bottom }}px;
+  {% endif %}
+  {% if section.settings.mobile_margin_top != blank %}
+    --mobile-margin-top: {{ section.settings.mobile_margin_top }}px;
+  {% endif %}
+  {% if section.settings.mobile_margin_bottom != blank %}
+    --mobile-margin-bottom: {{ section.settings.mobile_margin_bottom }}px;
+  {% endif %}
+">
   <div class="container">
     {% if section.settings.show_banner_desktop or section.settings.show_banner_mobile %}
       <div class="category-banner {% if section.settings.show_banner_desktop == false %}desktop-hide-banner{% endif %} {% if section.settings.show_banner_mobile == false %}mobile-hide-banner{% endif %}">
@@ -189,6 +204,15 @@
   .featured-categories {
     padding: 30px 0;
     background-color: #fff;
+  }
+  
+  @media screen and (max-width: 767px) {
+    .featured-categories {
+      padding-top: var(--mobile-padding-top, 20px);
+      padding-bottom: var(--mobile-padding-bottom, 16px);
+      margin-top: var(--mobile-margin-top, 0);
+      margin-bottom: var(--mobile-margin-bottom, 0);
+    }
   }
   
   .section-header {
@@ -794,6 +818,46 @@
       "unit": "px",
       "label": "Bottom padding",
       "default": 36
+    },
+    {
+      "type": "range",
+      "id": "mobile_padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Mobile top padding",
+      "default": 20
+    },
+    {
+      "type": "range",
+      "id": "mobile_padding_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Mobile bottom padding",
+      "default": 16
+    },
+    {
+      "type": "range",
+      "id": "mobile_margin_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Mobile top margin",
+      "default": 0
+    },
+    {
+      "type": "range",
+      "id": "mobile_margin_bottom",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Mobile bottom margin",
+      "default": 0
     }
   ],
   "blocks": [
