--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,6 +33,8 @@
   
   {% section 'footer' %}
   
+  {% section 'promo-popup' %}
+  
   <!-- Theme Scripts -->
   {{ 'theme.js' | asset_url | script_tag }}
   
