--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -34,6 +34,7 @@
   {% section 'footer' %}
   
   {% section 'promo-popup' %}
+  {% section 'whatsapp-chat' %}
   
   <!-- Theme Scripts -->
   {{ 'theme.js' | asset_url | script_tag }}
